--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,25 @@
-- name: Upload files via SCP
-  uses: appleboy/scp-action@v0.1.7
-  with:
-    host: ${{ secrets.HOST }}
-    username: ${{ secrets.USERNAME }}
-    key: ${{ secrets.PRIVATE_KEY }}
-    passphrase: ${{ secrets.KEY_PASSPHRASE }}
-    port: 22
-    source: "dist/*"
-    target: "/home/username/public_html"
+name: Workflow Name
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Upload files via SCP
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          passphrase: ${{ secrets.KEY_PASSPHRASE }}
+          port: 22
+          source: "dist/*"
+          target: "/home/username/public_html"
+
