--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,41 @@
-name: Workflow Name
+name: Deploy Lovable Project to cPanel
 
 on:
   push:
     branches:
-      - main
+      - main  # Lè ou fè push sou branch main, workflow lan lanse otomatikman
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
+      # 1️⃣ Checkout kòd la
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # 2️⃣ Setup Node.js (si Lovable se React + Vite)
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'  # adapte ak vèsyon pwojè w lan
+
+      # 3️⃣ Install dependencies
+      - name: Install dependencies
+        run: npm install
+
+      # 4️⃣ Build pwojè a
+      - name: Build project
+        run: npm run build
+
+      # 5️⃣ Upload sou cPanel via SCP
       - name: Upload files via SCP
         uses: appleboy/scp-action@v0.1.7
         with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.PRIVATE_KEY }}
-          passphrase: ${{ secrets.KEY_PASSPHRASE }}
-          port: 22
-          source: "dist/*"
-          target: "/home/username/public_html"
-
+          host: ${{ secrets.HOST }}                  # eg: yourdomain.com
+          username: ${{ secrets.USERNAME }}          # cPanel SSH user
+          key: ${{ secrets.PRIVATE_KEY }}            # kle prive ou telechaje nan cPanel
+          passphrase: ${{ secrets.KEY_PASSPHRASE }} # modpas kle a (si genyen)
+          port: 22                                   # default SSH port
+          source: "dist/*"                           # folder build lan
+          target: "/home/username/public_html"      # chemen nan cPanel
