--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,56 +1,3 @@
-name: Deploy Lovable to cPanel
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      # 1️⃣ Checkout repository
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      # 2️⃣ Setup Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
-      # 3️⃣ Install dependencies
-      - name: Install dependencies
-        run: npm install
-
-      # 4️⃣ Build project
-      - name: Build project
-        run: npm run build
-
-      # 5️⃣ Upload build to temp folder (folder kreye manyèlman sou cPanel)
-      - name: Upload build to temp folder
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.CPANEL_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.CPANEL_SSH_KEY }}
-          passphrase: ${{ secrets.KEY_PASSPHRASE }}
-          port: ${{ secrets.CPANEL_PORT }}
-          source: "dist/*"
-          target: "/home/sbtechn/temp_lovable"
-          overwrite: true
-
-      # 6️⃣ Move files to public_html
-      - name: Move files to public_html
-        uses: appleboy/ssh-action@v0.1.6
-        with:
-          host: ${{ secrets.CPANEL_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.CPANEL_SSH_KEY }}
-          passphrase: ${{ secrets.KEY_PASSPHRASE }}
-          port: ${{ secrets.CPANEL_PORT }}
-          script: |
-            rm -rf /home/sbtechn/public_html/*
-            mv /home/sbtechn/temp_lovable/dist/* /home/sbtechn/public_html/
-            rm -rf /home/sbtechn/temp_lovable/*
+git add .github/workflows/deploy.yml
+git commit -m "Add GitHub Action build & deploy workflow"
+git push origin main
