--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,3 +1,9 @@
+deployment:
+  tasks:
+    - export DEPLOY_DIR=public_html
+    - echo "Deploying to $DEPLOY_DIR"
+    - rm -rf $DEPLOY_DIR/*
+    - cp -r lovable-rebrand-engine/dist/* $DEPLOY_DIR/
 ---
 # cPanel Deployment Config pou pwojè Lovable
 deployment:
