--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,32 +3,23 @@ name: Deploy to cPanel
 on:
   push:
     branches:
-      - main  # chak fwa ou fè push nan branch main
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build project
-      run: npm run build
-
-    - name: Deploy to cPanel via FTP/SFTP
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y lftp
-        lftp -u ${{ secrets.CPANEL_USERNAME }},${{ secrets.CPANEL_PASSWORD }} -p ${{ secrets.CPANEL_PORT }} ${{ secrets.CPANEL_HOST }} <<EOF
-        mirror -R --delete --verbose dist/ public_html/
-        quit
-        EOF
+      - name: Deploy dist folder via FTP
+        uses: SamKirkland/FTP-Deploy-Action@4.3.0
+        with:
+          server: ${{ secrets.CPANEL_HOST }}
+          username: ${{ secrets.CPANEL_USERNAME }}
+          password: ${{ secrets.CPANEL_PASSWORD }}
+          port: ${{ secrets.CPANEL_PORT }}
+          local-dir: dist
+          server-dir: public_html
+          protocol: ftp   # itilize sftp si port 22
+          dry-run: false
