--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           username: ${{ secrets.CPANEL_USERNAME }}
           password: ${{ secrets.CPANEL_PASSWORD }}
           port: ${{ secrets.CPANEL_PORT }}
-          local-dir: dist
+          local-dir: dist/        # <- Fini ak /
           server-dir: public_html
-          protocol: ftp   # itilize sftp si port 22
+          protocol: ftp
           dry-run: false
