--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to cPanel
+name: Build and Deploy to cPanel
 
 on:
   push:
@@ -8,9 +8,21 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build project
+        run: npm run build
 
       - name: Deploy dist folder via FTP
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
@@ -19,7 +31,7 @@ jobs:
           username: ${{ secrets.CPANEL_USERNAME }}
           password: ${{ secrets.CPANEL_PASSWORD }}
           port: ${{ secrets.CPANEL_PORT }}
-          local-dir: dist/          # folder lokal fini ak /
-          server-dir: public_html/  # folder sou cPanel fini ak /
+          local-dir: dist/          # folder build la
+          server-dir: public_html/  # folder sou cPanel
           protocol: ftp
           dry-run: false
